<resources>
    <string name="app_name">TaskTimerApp_PinkNinjas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="task_description">Task Description</string>
    <string name="enter_task_title_here">Enter Task title here …</string>
    <string name="task_title">Task Title</string>
    <string name="enter_task_description_here">Enter Task description here …</string>
    <string name="total_time">Total Time</string>
    <string name="add">Add</string>
    <string name="enter_total_time_here">Enter Total Time here …</string>
    <string name="_03_50">00:00:00</string>
    <string name="task_2">Task 2</string>
    <string name="remaining_time">Remaining time</string>
    <string name="task">Task</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="x">X</string>
    <string-array name="plantsItems">
        <item>Dump cane plant</item>
        <item>Snake plant</item>
        <item>Spider plant</item>
    </string-array>
</resources>