<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">

        <ImageButton
            android:id="@+id/btBackUD"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_arrow_back"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bottom_box"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/item_row_style"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTaskCard3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/task_title"
                android:textColor="#673AB7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/taskTitleETUD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/enter_task_title_here"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvTaskCard2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/task_description"
                android:textColor="#673AB7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/taskDescriptionETUD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/enter_task_description_here"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvTaskCardUD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/total_time"
                android:textColor="#673AB7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/totalTimeETUD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="Enter Total Time in Minutes ..."
                android:importantForAutofill="no"
                android:inputType="number|textPersonName"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvTaskCard4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-black"
                android:text="Choose a Plant "
                android:textColor="#673AB7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llplantPickerUD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="50dp">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/plantImageEdit"
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/plant1"
                        tools:ignore="ImageContrastCheck" />
                </androidx.cardview.widget.CardView>

                <Spinner
                    android:id="@+id/plantPickerSPinnerEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/plantsItems"
                    android:minHeight="48dp"
                    android:textAlignment="center" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btUpdate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/item_row_style"
                    android:backgroundTint="#673AB7"
                    android:fontFamily="casual"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/btDelete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/item_row_style"
                    android:backgroundTint="#673AB7"
                    android:fontFamily="casual"
                    android:text="@string/delete" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>