<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">

        <nl.dionsegijn.konfetti.KonfettiView
            android:id="@+id/myConfetti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/statisticImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_insert_chart_24"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

        <ImageView
            android:id="@+id/settingsImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_baseline_settings_24"
            android:contentDescription="@string/todo"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-65dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/characterImageView"
                android:layout_width="150dp"
                android:layout_height="135dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/plant1"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/previousImageView"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_baseline_keyboard_double_arrow_left_24"
                    app:tint="@color/white"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/playImageView"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_play_circle_outline_24"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/nextImageView"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_baseline_keyboard_double_arrow_right_24"
                    app:tint="@color/white"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="240dp"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_timer_bg"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTimeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_03_50"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvTaskHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/task_2"
                android:textColor="#99FFFFFF"
                android:textSize="25sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTaskCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/task_2"
                    android:textColor="#673AB7"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/editImageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ic_baseline_mode_edit_24"
                    android:backgroundTint="@color/purple_200" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvTotalTimeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="casual"
                android:text="@string/total_time"
                android:textColor="#8E8E8E"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvRemainingTimeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/remaining_time"
                android:textColor="#673AB7"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rvLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bottom_box"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardLayout">

            <LinearLayout
                android:id="@+id/expandLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvExpand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_keyboard_double_arrow_down_24"
                    android:backgroundTint="@color/purple_200"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvList"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:paddingBottom="30dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>